--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
     <!-- MAIN ======================================= -->
     <section class="home" id="home">
         <video autoplay muted loop>
-            <source src="../videos/video_garra1_tulipa.mp4" type="video/mp4">
+            <source src="../videos/video.mp4" type="video/mp4">
         </video>
 
         <div class="home-text">
