--- a/html/index.html
+++ b/html/index.html
@@ -32,9 +32,14 @@
 
     <!-- MAIN ======================================= -->
     <section class="home" id="home">
+
+        <img src="../imgs/fundo.png" alt="">
+
+        <!--
         <video autoplay muted loop>
             <source src="../videos/video.mp4" type="video/mp4">
         </video>
+        -->
 
         <div class="home-text">
             <h1>Soft Grippers</h1>
