Finalizando Conteúdo Pág. Inicial - Falta Detalhes

--- a/html/index.html
+++ b/html/index.html
@@ -131,27 +131,43 @@
                     <p>(11) 3939-90909</p>
                 </div>
             </div>
-
-            <div class="container">
-                <h2>Redes Sociais</h2>
-
-                <div class="texto">
-                    <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
-
-                        </i></a>
-                    <a href=""><i id="icon-footer" class='bx bxl-facebook'>
-
-                        </i></a>
-                    <a href=""><i id="icon-footer" class='bx bxl-instagram'>
-
-                        </i></a>
-                    <a href=""><i id="icon-footer" class='bx bxl-youtube'>
-
-                        </i></a>
-                </div>
-            </div>
         </div>
 
+    </section>
+
+    <section class="section2" id="footer2">
+        <div id="footer-container">
+            <div>
+                <img src="../imgs/logo-branco.png" id="logo-footer" alt="">
+            </div>
+
+            <div id="footer-icons">
+                <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
+
+                    </i></a>
+                <a href=""><i id="icon-footer" class='bx bxl-facebook'>
+
+                    </i></a>
+                <a href=""><i id="icon-footer" class='bx bxl-instagram'>
+
+                    </i></a>
+                <a href=""><i id="icon-footer" class='bx bxl-youtube'>
+
+                    </i></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section2" id="footer3">
+        <div id="div-footer3">
+            <h2 id="h2-footer3">Todos os Direitos Reservados</h2>
+
+            <ul class="navlist-footer3">
+                <li><a href="#">Cookies</a></li>
+                <li><a href="#">Política</a></li>
+                <li><a href="#">Termos</a></li>
+            </ul>
+        </div>
     </section>
     <!-- FOOTER ===================================== -->
 
