--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="16x16">
     <title>Soft Grippers</title>
 </head>
 
@@ -19,7 +20,7 @@
         <ul class="navlist">
             <li><a href="#">Home</a></li>
             <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#servicos">Produtos</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
             <li><a href="#portfolio">Projetos</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
@@ -48,8 +49,8 @@
                 de garras flexíveis para uma ampla variedade de aplicações.</p>
 
             <div class="button">
-                <a href="#produtos" class="btn">Produtos</a>
-                <a href="#contato" class="btn2">Contato</a>
+                <a href="produtos.html" target="_blank" class="btn">Produtos</a>
+                <a href="#contato" target="_blank" class="btn2">Contato</a>
             </div>
 
             <div>
@@ -104,7 +105,7 @@
         <p class="detalhes-p">Clique Abaixo</p>
 
         <div class="button">
-            <a href="#" id="detalhes-button" class="btn">VER PRODUTOS</a>
+            <a href="produtos.html" target="_blank" id="detalhes-button" class="btn">VER PRODUTOS</a>
         </div>
     </div>
     <!-- PRODUTOS =================================== -->
