Adicionando Pág. Contato e Sobre Nós

--- a/html/contato.html
+++ b/html/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pr-br">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="64x64">
+    <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="16x16">
     <title>Soft Grippers</title>
 </head>
 
@@ -30,6 +30,26 @@
         </div>
     </header>
     <!-- HEADER ===================================== -->
+
+    <!-- MAIN ======================================= -->
+    <section class="contact" id="contato">
+        <div class="contact-text">
+            <h2>Entre em <span>Contato</span></h2>
+            <h4>Fale com um de nossos melhores atendentes para ser ouvido!</h4>
+            
+        </div>
+
+        <div class="contact-form">
+            <form action="">
+                <input autofocus id="nome" type="name" placeholder="Seu Nome" required>
+                <input type="email" placeholder="Seu Email" required>
+                <input type="" placeholder="Seu Telefone" required>
+                <textarea name="" id="" cols="35" rows="10" placeholder="Como posso te ajudar?" required></textarea>
+                <input type="submit" value="Mandar Mensagem" class="submit" required>
+            </form>
+        </div>
+    </section>
+    <!-- MAIN ======================================= -->
 
     <!-- FOOTER ===================================== -->
     <section id="footer">
