Começando Pág. Produtos

--- a/html/contato.html
+++ b/html/contato.html
@@ -35,7 +35,7 @@
     <section class="contact" id="contato">
         <div class="contact-text">
             <h2>Entre em <span>Contato</span></h2>
-            <h4>Fale com um de nossos melhores atendentes para ser ouvido!</h4>
+            <h4 id="h4-contato">Fale com um de nossos melhores atendentes para ser ouvido!</h4>
             
         </div>
 
