--- a/html/produtos.html
+++ b/html/produtos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="64x64">
+    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <title>Soft Grippers</title>
 </head>
 
@@ -30,6 +31,40 @@
         </div>
     </header>
     <!-- HEADER ===================================== -->
+
+    <!-- MAIN ======================================= -->
+    <section id="section-produtos">
+        <div class="slide-container swiper">
+            <div class="slide-content">
+                <div class="card-wrapper swiper-wrapper">
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/tulipa.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">tulipa</h2>
+
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, ipsum.
+                                Similique ipsa architecto optio non expedita harum quia, quam id quibusdam minima
+                                exercitationem, quas dolorum quae sit laboriosam, repellat quisquam.</p>
+
+                            <button class="button-produtos">Veja Mais</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
+    <!-- MAIN ======================================= -->
 
     <!-- FOOTER ===================================== -->
     <section id="footer">
@@ -94,6 +129,7 @@
     <!-- FOOTER ===================================== -->
 
     <script src="../js/script.js"></script>
+    <script src="../js/swiper-bundle.min.js"></script>
 </body>
 
 </html>
