Organizando o CSS em Pastas

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/produtos.css">
+    <link rel="stylesheet" href="../css/responsivo.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="64x64">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
@@ -47,11 +51,45 @@
                         </div>
 
                         <div class="card-content">
-                            <h2 class="name">tulipa</h2>
+                            <h2 class="name">Tulipa</h2>
 
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, ipsum.
-                                Similique ipsa architecto optio non expedita harum quia, quam id quibusdam minima
-                                exercitationem, quas dolorum quae sit laboriosam, repellat quisquam.</p>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+                            <button class="button-produtos">Veja Mais</button>
+                        </div>
+                    </div>
+
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/fingers.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Fingers</h2>
+
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+                            <button class="button-produtos">Veja Mais</button>
+                        </div>
+                    </div>
+
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/flexgripper.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Flex Gripper</h2>
+
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
                             <button class="button-produtos">Veja Mais</button>
                         </div>
@@ -59,8 +97,8 @@
                 </div>
             </div>
 
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next swiper-navBtn"></div>
+            <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
         </div>
     </section>
@@ -130,6 +168,7 @@
 
     <script src="../js/script.js"></script>
     <script src="../js/swiper-bundle.min.js"></script>
+    <script src="../js/swiper.js"></script>
 </body>
 
 </html>
