Aumento o Selo da Page

--- a/html/contato.html
+++ b/html/contato.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="16x16">
+    <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
 </head>
 
