--- a/html/produtos.html
+++ b/html/produtos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/produtos.css">
     <link rel="stylesheet" href="../css/responsivo.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="icon" href="../imgs/selo.png" type="image/gif" sizes="64x64">
+    <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <title>Soft Grippers</title>
 </head>
