Finalizando Pag. Produtos

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -87,7 +87,7 @@
                         </div>
 
                         <div class="card-content">
-                            <h2 class="name">Flex Gripper</h2>
+                            <h2 class="name">FlexGripper</h2>
 
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
@@ -97,8 +97,8 @@
                 </div>
             </div>
 
-            <div class="swiper-button-next swiper-navBtn"></div>
-            <div class="swiper-button-prev swiper-navBtn"></div>
+            <div class="swiper-button-next" id="swiper-navBtn"></div>
+            <div class="swiper-button-prev" id="swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
         </div>
     </section>
