Pág. Produtos Finalizada e Footer 2 e 3 Totalmente Responsivos

--- a/html/noticias.html
+++ b/html/noticias.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/responsivo.css">
+    <link rel="stylesheet" href="../css/index-produtos.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -142,7 +143,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <img src="../imgs/logo-branco.png" id="logo-footer" alt="">
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
             </div>
 
             <div id="footer-icons">
