--- a/html/produtos.html
+++ b/html/produtos.html
@@ -38,6 +38,11 @@
 
     <!-- MAIN ======================================= -->
     <section id="section-produtos">
+        <div class="div-h2-produtos">
+            <h2 id="h2-produtos">Nossos Produtos</h2>
+        </div>
+
+
         <div class="slide-container swiper">
             <div class="slide-content">
                 <div class="card-wrapper swiper-wrapper">
@@ -53,9 +58,12 @@
                         <div class="card-content">
                             <h2 class="name">Tulipa</h2>
 
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p class="description">As Tulipas Soft Grippers são garras robóticas flexíveis feitas de
+                                material hiperelástico com câmaras de ar pressurizáveis.</p>
 
-                            <button class="button-produtos">Veja Mais</button>
+                            <div class="div-button-produtos">
+                                <a href="produtos.html" target="_blank" class="button-produtos">Veja Mais</a>
+                            </div>
                         </div>
                     </div>
 
@@ -71,9 +79,12 @@
                         <div class="card-content">
                             <h2 class="name">Fingers</h2>
 
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p class="description">Os Fingers Soft Grippers são garras robóticas flexíveis feitas de
+                                material hiperelástico, possuindo partes, os fingers.</p>
 
-                            <button class="button-produtos">Veja Mais</button>
+                            <div class="div-button-produtos">
+                                <a href="produtos.html" target="_blank" class="button-produtos">Veja Mais</a>
+                            </div>
                         </div>
                     </div>
 
@@ -89,9 +100,12 @@
                         <div class="card-content">
                             <h2 class="name">FlexGripper</h2>
 
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p class="description">As FlexGrippers são garras robóticas flexíveis feitas
+                                de material hiperelástico com câmaras de ar pressurizáveis.</p>
 
-                            <button class="button-produtos">Veja Mais</button>
+                            <div class="div-button-produtos">
+                                <a href="produtos.html" target="_blank" class="button-produtos">Veja Mais</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -133,7 +147,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <img src="../imgs/logo-branco.png" id="logo-footer" alt="">
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
             </div>
 
             <div id="footer-icons">
