--- a/html/index.html
+++ b/html/index.html
@@ -143,7 +143,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-                <img src="../imgs/logo-branco.png" id="logo-footer" alt="">
+               <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
             </div>
 
             <div id="footer-icons">
