Começando Pág. específica de cada Produtos (Tulipa)

--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
 
             <div class="button">
                 <a href="produtos.html" target="_blank" class="btn">Produtos</a>
-                <a href="#contato" target="_blank" class="btn2">Contato</a>
+                <a href="contato.html" target="_blank" class="btn2">Contato</a>
             </div>
 
             <div>
