--- a/html/produtos.html
+++ b/html/produtos.html
@@ -62,7 +62,7 @@
                                 material hiperelástico com câmaras de ar pressurizáveis.</p>
 
                             <div class="div-button-produtos">
-                                <a href="produtos.html" target="_blank" class="button-produtos">Veja Mais</a>
+                                <a href="tulipa.html" target="_blank" class="button-produtos">Veja Mais</a>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                                 material hiperelástico, possuindo partes, os fingers.</p>
 
                             <div class="div-button-produtos">
-                                <a href="produtos.html" target="_blank" class="button-produtos">Veja Mais</a>
+                                <a href="fingers.html" target="_blank" class="button-produtos">Veja Mais</a>
                             </div>
                         </div>
                     </div>
@@ -100,11 +100,11 @@
                         <div class="card-content">
                             <h2 class="name">FlexGripper</h2>
 
-                            <p class="description">As FlexGrippers são garras robóticas flexíveis feitas
+                            <p class="description">As FlexGrippers Soft Grippers são garras robóticas flexíveis feitas
                                 de material hiperelástico com câmaras de ar pressurizáveis.</p>
 
                             <div class="div-button-produtos">
-                                <a href="produtos.html" target="_blank" class="button-produtos">Veja Mais</a>
+                                <a href="flexgrippers.html" target="_blank" class="button-produtos">Veja Mais</a>
                             </div>
                         </div>
                     </div>
