--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
+    <link rel="stylesheet" href="../css/index-produtos.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -19,11 +22,11 @@
         <a href="index.html"><img src="../imgs/logo.png" class="logo" alt=""></a>
 
         <ul class="navlist">
-            <li><a href="#">Home</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#servicos">Produtos</a></li>
-            <li><a href="#portfolio">Projetos</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="noticias.html">Notícias</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
@@ -33,28 +36,72 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section class="home" id="home">
-        <video autoplay muted loop>
-            <source src="../videos/video_garra1_tulipa.mp4" type="video/mp4">
-        </video>
-
-        <div class="home-text">
-            <h1>Soft Grippers</h1>
-            <h3>Empresa de <span>Robótica Mole</span></h3>
-            <p>A Soft Grippers é uma empresa líder no campo da robótica mole no Brasil, que se dedica ao desenvolvimento
-                de garras flexíveis para uma ampla variedade de aplicações.</p>
-
-            <div class="button">
-                <a href="#contato" class="btn">Produtos</a>
-                <a href="#portfolio" class="btn2">Contato</a>
-            </div>
+    <section id="flexgripper">
         
+    </section>
+    <!-- MAIN ======================================= -->
+
+    <!-- FOOTER ===================================== -->
+    <section id="footer">
+        <div class="alinhar-container">
+            <div class="container1">
+                <h2>Soft Grippers</h2>
+
+                <div class="texto">
+                    <p class="texto-p">CNPJ - 35.688.484/0001-98</p>
+
+                    <p>Endereço - Rua Barão de Monte Santo, 468
+                        CEP: 03123-020 - Mooca, São Paulo</p>
+                </div>
+            </div>
+
+            <div class="container">
+                <h2>Contato</h2>
+
+                <div class="texto">
+                    <a href="#">info@softgrippers.com</a>
+                    <p>(11) 3939-90909</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="section2" id="footer2">
+        <div id="footer-container">
             <div>
-                <a href="#portfolio"><i id="seta" class='bx bxs-chevron-down'></i></a>
+               <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+            </div>
+
+            <div id="footer-icons">
+                <a href=""><i id="icon-footer" class='bx bxl-linkedin'>
+
+                    </i></a>
+                <a href=""><i id="icon-footer" class='bx bxl-facebook'>
+
+                    </i></a>
+                <a href=""><i id="icon-footer" class='bx bxl-instagram'>
+
+                    </i></a>
+                <a href=""><i id="icon-footer" class='bx bxl-youtube'>
+
+                    </i></a>
             </div>
         </div>
     </section>
-    <!-- MAIN ======================================= -->
+
+    <section class="section2" id="footer3">
+        <div id="div-footer3">
+            <h2 id="h2-footer3">Todos os Direitos Reservados</h2>
+
+            <ul class="navlist-footer3">
+                <li><a href="#">Cookies</a></li>
+                <li><a href="#">Política</a></li>
+                <li><a href="#">Termos</a></li>
+            </ul>
+        </div>
+    </section>
+    <!-- FOOTER ===================================== -->
 
     <script src="../js/script.js"></script>
 </body>
