Adicionando Págs. dos Produtos

--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
     <link rel="stylesheet" href="../css/index-produtos.css">
+    <link rel="stylesheet" href="../css/fingers.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -36,8 +37,38 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="flexgripper">
-        
+    <section id="tulipa">
+        <div class="div-h2-tulipa">
+            <h2 id="h2-tulipa">Flex Gripper Soft Grippers</h2>
+        </div>
+
+        <div class="slide-container swiper">
+            <div class="slide-content">
+                <div class="card-wrapper swiper-wrapper">
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/flexgripper.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Flex Gripper</h2>
+
+                            <p class="description">As FlexGrippers Soft Grippers são garras robóticas flexíveis feitas
+                                de material hiperelástico com câmaras de ar pressurizáveis, permitindo a manipulação de
+                                peças de até Ø10mm e não possuindo um corpo externo rígido, sendo adequadas para
+                                manusear objetos como garrafas, potes, frutas e outros produtos com formas regulares e
+                                irregulares.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </section>
     <!-- MAIN ======================================= -->
 
@@ -70,7 +101,7 @@
     <section class="section2" id="footer2">
         <div id="footer-container">
             <div>
-               <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
+                <a href="index.html"><img src="../imgs/logo-branco.png" id="logo-footer" alt=""></a>
             </div>
 
             <div id="footer-icons">
