--- a/html/index.html
+++ b/html/index.html
@@ -48,9 +48,7 @@
 
         <div class="home-text">
             <h1>Soft Grippers</h1>
-            <h3>Empresa de <span>Robótica Mole</span></h3>
-            <p>A Soft Grippers é uma empresa líder no campo da robótica mole no Brasil, que se dedica ao desenvolvimento
-                de garras flexíveis para uma ampla variedade de aplicações.</p>
+            <h3 id="h3-home-text">Empresa de <span>Robótica Mole</span></h3>
 
             <div class="button">
                 <a href="produtos.html" target="_blank" class="btn">Produtos</a>
