--- a/html/noticias.html
+++ b/html/noticias.html
@@ -36,83 +36,10 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section class="home" id="home">
-
-        <img src="../imgs/fundo.png" alt="">
-
-        <!--
-        <video autoplay muted loop>
-            <source src="../videos/video.mp4" type="video/mp4">
-        </video>
-        -->
-
-        <div class="home-text">
-            <h1>Soft Grippers</h1>
-            <h3>Empresa de <span>Robótica Mole</span></h3>
-            <p>A Soft Grippers é uma empresa líder no campo da robótica mole no Brasil, que se dedica ao desenvolvimento
-                de garras flexíveis para uma ampla variedade de aplicações.</p>
-
-            <div class="button">
-                <a href="produtos.html" target="_blank" class="btn">Produtos</a>
-                <a href="#contato" target="_blank" class="btn2">Contato</a>
-            </div>
-
-            <div>
-                <a href="#produtos"><i id="seta" class='bx bxs-chevron-down'></i></a>
-            </div>
-        </div>
+    <section>
+        
     </section>
     <!-- MAIN ======================================= -->
-
-    <!-- PRODUTOS =================================== -->
-    <section class="portfolio" id="produtos">
-        <div class="main-texto">
-            <h2>Nossos Produtos</h2>
-        </div>
-
-        <div class="produtos-content">
-            <div id="row1" class="row">
-                <img src="../imgs/tulipa.png" alt="Projeto de Site em HTML5 e CSS3.">
-                <div class="layer">
-                    <h5>Tulipa</h5>
-                    <p>Saiba Mais</p>
-                    <a href="../html/tulipa.html" target="_blank"><i id="link-icon" class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="produtos-content2">
-            <div id="row2" class="row">
-                <img src="../imgs/fingers.png" alt="Jogo C - Batalha Naval">
-                <div class="layer">
-                    <h5>Fingers</h5>
-                    <p>Saiba Mais</p>
-                    <a href="../html/fingers.html" target="_blank"><i id="link-icon"
-                            class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div id="row3" class="row">
-                <img src="../imgs/flexgripper.png" alt="Jogo C - Batalha Naval">
-                <div class="layer">
-                    <h5>FlexGripper</h5>
-                    <p>Saiba Mais</p>
-                    <a href="../html/flexgrippers.html" target="_blank"><i id="link-icon"
-                            class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div id="detalhes">
-        <h2 class="detalhes-h2">Gostou? Veja com mais Detalhes</h2>
-        <p class="detalhes-p">Clique Abaixo</p>
-
-        <div class="button">
-            <a href="produtos.html" target="_blank" id="detalhes-button" class="btn">VER PRODUTOS</a>
-        </div>
-    </div>
-    <!-- PRODUTOS =================================== -->
 
     <!-- FOOTER ===================================== -->
     <section id="footer">
