--- a/html/produtos.html
+++ b/html/produtos.html
@@ -48,11 +48,7 @@
                 <div class="card-wrapper swiper-wrapper">
                     <div class="card swiper-slide">
                         <div class="image-content">
-                            <span class="overlay"></span>
-
-                            <div class="card-image">
-                                <img src="../imgs/tulipa.png" alt="" class="card-img">
-                            </div>
+                            <span id="overlay1" class="overlay"></span>
                         </div>
 
                         <div class="card-content">
@@ -69,11 +65,7 @@
 
                     <div class="card swiper-slide">
                         <div class="image-content">
-                            <span class="overlay"></span>
-
-                            <div class="card-image">
-                                <img src="../imgs/fingers.png" alt="" class="card-img">
-                            </div>
+                            <span id="overlay2" class="overlay"></span>
                         </div>
 
                         <div class="card-content">
@@ -90,11 +82,7 @@
 
                     <div class="card swiper-slide">
                         <div class="image-content">
-                            <span class="overlay"></span>
-
-                            <div class="card-image">
-                                <img src="../imgs/flexgripper.png" alt="" class="card-img">
-                            </div>
+                            <span id="overlay3" class="overlay"></span>
                         </div>
 
                         <div class="card-content">
