--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
     <link rel="stylesheet" href="../css/index-produtos.css">
-    <link rel="stylesheet" href="../css/tulipa.css">
+    <link rel="stylesheet" href="../css/fingers.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -62,7 +62,7 @@
                                 pneumaticamente, diminuindo o diâmetro interno da garra, possibilitando a manipulação de
                                 peças de até Ø2mm. Possuindo um copo externo de material rígido. Sendo indicada para
                                 manipulação de peças de formas regulares e irregulares, como: garrafas, potes, frutas,
-                                entre outros produtos.</p>
+                                entre outros produtos..</p>
                         </div>
                     </div>
 
