Adicionando baixar documentação

--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
     <link rel="stylesheet" href="../css/index-produtos.css">
-    <link rel="stylesheet" href="../css/fingers.css">
+    <link rel="stylesheet" href="../css/tulipa.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -65,10 +65,24 @@
                                 entre outros produtos..</p>
                         </div>
                     </div>
-
-
                 </div>
             </div>
+        </div>
+
+        <div class="div-h2-documentacao">
+            <h2 id="h2-documentacao">Baixe a Documentação</h2>
+
+            <p class="p-documentacao">Clique Abaixo</p>
+        </div>
+
+        <div class="div-baixar">
+            <div>
+                <i id="pdf-baixar" class='bx bxs-file-pdf'></i>
+
+                <p id="p-documentacao">tulipa.pdf</p>
+            </div>
+            
+            <a href="../docs/tulipa.pdf" target="_blank"><i id="icon-baixar" class='bx bx-download'></i></a>
         </div>
     </section>
     <!-- MAIN ======================================= -->
