Finalizando Pág. Tulipa (Falta Mobile)

--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -69,21 +69,23 @@
             </div>
         </div>
 
-        <div class="div-h2-documentacao">
-            <h2 id="h2-documentacao">Baixe a Documentação</h2>
+        <section>
+            <div class="div-h2-documentacao">
+                <h2 id="h2-documentacao">Baixe a Documentação</h2>
 
-            <p class="p-documentacao">Clique Abaixo</p>
-        </div>
-
-        <div class="div-baixar">
-            <div>
-                <i id="pdf-baixar" class='bx bxs-file-pdf'></i>
-
-                <p id="p-documentacao">tulipa.pdf</p>
+                <p class="p-documentacao">Clique Abaixo</p>
             </div>
-            
-            <a href="../docs/tulipa.pdf" target="_blank"><i id="icon-baixar" class='bx bx-download'></i></a>
-        </div>
+
+            <div class="div-baixar">
+                <div id="div-baixar2">
+                    <i id="pdf-baixar" class='bx bxs-file-pdf'></i>
+
+                    <p id="p-documentacao">tulipa.pdf</p>
+                </div>
+
+                <a href="../docs/tulipa.pdf"><i id="icon-baixar" class='bx bx-download'></i></a>
+            </div>
+        </section>
     </section>
     <!-- MAIN ======================================= -->
 
