Finalizando Págs. dos Produtos

--- a/html/fingers.html
+++ b/html/fingers.html
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="card-content">
-                            <h2 class="name">Fingers</h2>
+                            <h2 class="name">Tulipa</h2>
 
                             <p class="description">Os Fingers Soft Grippers são garras robóticas flexíveis feitas de
                                 material hiperelástico, possuindo partes, os fingers, que se fecha quando pressurizados,
@@ -63,11 +63,27 @@
                                 salsichas, frascos e outros produtos.</p>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
+
+        <section>
+            <div class="div-h2-documentacao">
+                <h2 id="h2-documentacao">Baixe a Documentação</h2>
+
+                <p class="p-documentacao">Clique Abaixo</p>
+            </div>
+
+            <div class="div-baixar">
+                <div id="div-baixar2">
+                    <i id="pdf-baixar" class='bx bxs-file-pdf'></i>
+
+                    <p id="p-documentacao">fingers.pdf</p>
+                </div>
+
+                <a href="../docs/fingers.pdf" target="_blank"><i id="icon-baixar" class='bx bx-download'></i></a>
+            </div>
+        </section>
     </section>
     <!-- MAIN ======================================= -->
 
