--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsivo.css">
     <link rel="stylesheet" href="../css/index-produtos.css">
-    <link rel="stylesheet" href="../css/fingers.css">
+    <link rel="stylesheet" href="../css/flexgrippers.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shorticon icon" type="image/gif" href="../imgs/selo.png" sizes="32x32">
     <title>Soft Grippers</title>
@@ -64,8 +64,6 @@
                                 irregulares.</p>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
