--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -83,7 +83,7 @@
                     <p id="p-documentacao">tulipa.pdf</p>
                 </div>
 
-                <a href="../docs/tulipa.pdf"><i id="icon-baixar" class='bx bx-download'></i></a>
+                <a href="../docs/tulipa.pdf" target="_blank"><i id="icon-baixar" class='bx bx-download'></i></a>
             </div>
         </section>
     </section>
