Bug da Pág. Produtos arrumado

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -48,7 +48,11 @@
                 <div class="card-wrapper swiper-wrapper">
                     <div class="card swiper-slide">
                         <div class="image-content">
-                            <span id="overlay1" class="overlay"></span>
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/tulipa.png" alt="" class="card-img">
+                            </div>
                         </div>
 
                         <div class="card-content">
@@ -65,7 +69,11 @@
 
                     <div class="card swiper-slide">
                         <div class="image-content">
-                            <span id="overlay2" class="overlay"></span>
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/fingers.png" alt="" class="card-img">
+                            </div>
                         </div>
 
                         <div class="card-content">
@@ -82,7 +90,11 @@
 
                     <div class="card swiper-slide">
                         <div class="image-content">
-                            <span id="overlay3" class="overlay"></span>
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="../imgs/flexgripper.png" alt="" class="card-img">
+                            </div>
                         </div>
 
                         <div class="card-content">
