Footer Responsivo Finalizado

--- a/html/index.html
+++ b/html/index.html
@@ -106,7 +106,7 @@
         <h2 class="detalhes-h2">Gostou? Veja com mais Detalhes</h2>
         <p class="detalhes-p">Clique Abaixo</p>
 
-        <div class="button">
+        <div class="button2">
             <a href="produtos.html" target="_blank" id="detalhes-button" class="btn">VER PRODUTOS</a>
         </div>
     </div>
