Responsivo da Pág. de cada Produto Finalizo

--- a/html/fingers.html
+++ b/html/fingers.html
@@ -37,7 +37,7 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="tulipa">
+    <section id="tulipa" class="section-fingers">
         <div class="div-h2-tulipa">
             <h2 id="h2-tulipa">Fingers Soft Grippers</h2>
         </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-        <section>
+        <section class="section-fingers-documentacao">
             <div class="div-h2-documentacao">
                 <h2 id="h2-documentacao">Baixe a Documentação</h2>
 
