--- a/html/flexgrippers.html
+++ b/html/flexgrippers.html
@@ -38,7 +38,7 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="tulipa">
+    <section id="tulipa" class="section-flexgripper">
         <div class="div-h2-tulipa">
             <h2 id="h2-tulipa">Flex Gripper Soft Grippers</h2>
         </div>
