--- a/html/tulipa.html
+++ b/html/tulipa.html
@@ -16,7 +16,7 @@
     <title>Soft Grippers</title>
 </head>
 
-<body id="section-produtos">
+<body>
 
     <!-- HEADER ===================================== -->
     <header id="header">
@@ -37,7 +37,7 @@
     <!-- HEADER ===================================== -->
 
     <!-- MAIN ======================================= -->
-    <section id="tulipa">
+    <section id="tulipa" class="section-tulipa">
         <div class="div-h2-tulipa">
             <h2 id="h2-tulipa">Tulipa Soft Grippers</h2>
         </div>
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <section>
+        <section class="section-tulipa">
             <div class="div-h2-documentacao">
                 <h2 id="h2-documentacao">Baixe a Documentação</h2>
 
