--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
         -->
 
         <div class="home-text">
-            
+
 
 
             <div class="button">
@@ -68,7 +68,7 @@
             <h2>Nossos Produtos</h2>
         </div>
 
-        <div class="produtos-content">
+        <div class="produtos-content" onclick="location.href='../html/tulipa.html';">
             <div id="row1" class="row">
                 <img src="../imgs/tulipa.png" alt="Projeto de Site em HTML5 e CSS3.">
                 <div class="layer">
@@ -80,7 +80,7 @@
         </div>
 
         <div class="produtos-content2">
-            <div id="row2" class="row">
+            <div id="row2" class="row" onclick="location.href='../html/fingers.html';">
                 <img src="../imgs/fingers.png" alt="Jogo C - Batalha Naval">
                 <div class="layer">
                     <h5>Fingers</h5>
@@ -90,7 +90,7 @@
                 </div>
             </div>
 
-            <div id="row3" class="row">
+            <div id="row3" class="row" onclick="location.href='../html/flexgrippers.html';">
                 <img src="../imgs/flexgripper.png" alt="Jogo C - Batalha Naval">
                 <div class="layer">
                     <h5>FlexGripper</h5>
@@ -100,6 +100,7 @@
                 </div>
             </div>
         </div>
+
     </section>
 
     <div id="detalhes">
